--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,15 +10,11 @@ variables:
         - go mod download
         - go test -race -tags=livetest ./...
 
-lint:
+linter:
     stage: test
-    image: golang:1.13
-    services: []
-    before_script:
-        - ''
+    image: golangci/golangci-lint:v1.26
     script:
         - go mod download
-        - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $(go env GOPATH)/bin v1.23.6
         - golangci-lint run ./...
 
 coverage:
@@ -42,6 +38,10 @@ go-1.12:
 go-1.13:
     <<: *test_template
     image: golang:1.13
+
+go-1.14:
+    <<: *test_template
+    image: golang:1.14
 
 gopherjs-1.12:
     <<: *test_template
