--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
     - test
 
-.test: &test_template
+.test: &go_test_template
     stage: test
     script:
         - go mod download
@@ -25,42 +25,35 @@ coverage:
         - ./script/coverage.sh
 
 go-1.13:
-    <<: *test_template
+    <<: *go_test_template
     image: golang:1.13
 
 go-1.14:
-    <<: *test_template
+    <<: *go_test_template
     image: golang:1.14
 
-gopherjs-1.12:
-    <<: *test_template
-    variables:
-        SRCDIR: /go/src/github.com/go-kivik/kivikmock/v3
-    image: golang:1.12
-    script:
-        - go get golang.org/dl/go1.12.16
-        - go1.12.16 download
-        - mkdir -p ${SRCDIR}
-        - mv ${CI_PROJECT_DIR}/* ${SRCDIR}
-        - cd ${SRCDIR}
-        - go mod vendor
-        - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-        - apt-get update -qq && apt-get install -y nodejs
-        - npm install
-        - GO111MODULE=off go get -u github.com/gopherjs/gopherjs
-        - npm install source-map-support
-        - |
-            (
-                cd $GOPATH/src/github.com/gopherjs/gopherjs/node-syscall/
-                npm install --global node-gyp
-                node-gyp rebuild
-                mkdir -p ~/.node_libraries/
-                cp build/Release/syscall.node ~/.node_libraries/syscall.node
-            )
-        - GOPHERJS_GOROOT="$(go1.12.16 env GOROOT)" gopherjs test ./...
-
 go-rc:
-    <<: *test_template
+    <<: *go_test_template
     stage: test
     image: golang:rc
     allow_failure: true
+
+.gopherjs_test: &gopherjs_test_template
+  <<: *go_test_template
+  before_script:
+    - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+    - apt-get update -qq && apt-get install -y nodejs
+  script:
+    - npm install -g npm@7.5.2 && npm update
+    - npm install
+    - npm install source-map-support
+    - mkdir -p /tmp/src
+    - ( cd /tmp && go install github.com/gopherjs/gopherjs@${GOPHERJS_TAG} )
+    - npm install -S https://github.com/gopherjs/gopherjs#${GOPHERJS_TAG} && node -r syscall
+    - gopherjs test ./...
+
+gopherjs-1.16:
+  <<: *gopherjs_test_template
+  image: golang:1.16
+  variables:
+    GOPHERJS_TAG: 1.16.4+go1.16.7
