--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,30 @@ go-1.14:
     <<: *go_test_template
     image: golang:1.14
 
+go-1.15:
+    <<: *go_test_template
+    image: golang:1.15
+
+go-1.16:
+    <<: *go_test_template
+    image: golang:1.16
+
+go-1.17:
+    <<: *go_test_template
+    image: golang:1.17
+
+go-1.18:
+    <<: *go_test_template
+    image: golang:1.18
+
+go-1.19:
+    <<: *go_test_template
+    image: golang:1.19
+
+go-1.20:
+    <<: *go_test_template
+    image: golang:1.20
+
 go-rc:
     <<: *go_test_template
     stage: test
