--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ linter:
 
 coverage:
     stage: test
-    image: golang:1.20
+    image: golang:1.21
     services: []
     before_script:
         - ""
@@ -39,6 +39,10 @@ go-1.19:
 go-1.20:
     <<: *go_test_template
     image: golang:1.20
+
+go-1.21:
+    <<: *go_test_template
+    image: golang:1.21
 
 go-rc:
     <<: *go_test_template
