--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,7 @@ go-rc:
 .gopherjs_test: &gopherjs_test_template
     <<: *go_test_template
     before_script:
-        - curl -sL https://deb.nodesource.com/setup_12.x | bash -
+        - curl -sL https://deb.nodesource.com/setup_${NODE_VER}.x | bash -
         - apt-get update -qq && apt-get install -y nodejs
     script:
         - npm install -g npm@7.5.2 && npm update
@@ -64,8 +64,9 @@ go-rc:
         - npm install -S https://github.com/gopherjs/gopherjs#${GOPHERJS_TAG} && node -r syscall
         - gopherjs test ./...
 
-gopherjs-1.17:
+gopherjs1.18:
     <<: *gopherjs_test_template
-    image: golang:1.17
+    image: golang:1.18
     variables:
-        GOPHERJS_TAG: v1.17.2+go1.17.9
+        NODE_VER: 12
+        GOPHERJS_TAG: v1.18.0-beta3
